@@ -2,6 +2,7 @@
 ==============
 
 Broker:
+- Replace O(n) username lookup on CONNECT with a roughly O(1) hashtable version.
 - Add support for round_robin bridge option.
 - It is now possible to disable $SYS at compile time.
 - Auth plugin ACL check function now passes the client id as well as username
